--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phonestagram",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Easily text photos to a phone number, apply a filter and have them posted online in realtime",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "Carter Rabasa",
   "license": "MIT",
   "dependencies": {
+    "boom": "^2.6.0",
     "caman": "^4.1.2",
     "hapi": "^7.2.0",
     "joi": "^4.7.0",
@@ -19,4 +20,3 @@
     "twilio": "^1.7.0"
   }
 }
-
